haggle/src/libhaggle/include/libhaggle/dataobject.h

typedef unsigned char dataobject_id_t[HASH_LENGTH];
/* Do not make visible the internal structure of the data object. */
typedef struct dataobject haggle_dobj_t;
/**
	This variable (which is only valid after getting the haggle handle), points
	to the directory where files belonging to data objects can be put. This is
	the same directory as haggle itself uses to store its data files.
*/
HAGGLE_API extern char *haggle_directory;
/* Data object API functions */
/**
	Creates a new data object. 
	
	The produced object is owned by the receiver.
	
	@returns A valid pointer to a data object struct iff successful, NULL 
	otherwise.
*/
HAGGLE_API struct dataobject *haggle_dataobject_new();
/**
	Creates a new data object with the contents of the file as data. 
	
	The produced object is owned by the receiver.
	
	@returns A valid pointer to a data object struct iff successful, NULL 
	otherwise.
*/
HAGGLE_API struct dataobject *haggle_dataobject_new_from_file(const char *filepath);
/**
	Creates a new data object with the contents of the data buffer as data. 
	
	The produced object is owned by the receiver.
	
	When this data object is received by libhaggle, the data buffer and the 
	length of the buffer will be available using
	haggle_dataobject_get_databuffer() and haggle_dataobject_get_size() 
	respectively.
	
	@returns A valid pointer to a data object struct iff successful, NULL 
	otherwise.
*/
HAGGLE_API struct dataobject *haggle_dataobject_new_from_buffer(const unsigned char *data, const size_t len);
/**
	Creates a new data object with the given metadata. 
	
	The produced object is owned by the receiver.
	
	@returns A valid pointer to a data object struct iff successful, NULL 
	otherwise.
*/
HAGGLE_API struct dataobject *haggle_dataobject_new_from_raw(const unsigned char *raw, const size_t len);