haggle/src/apps/filegenerate/haggle.py


# /usr/local/include/libhaggle/attribute.h: 87
if hasattr(_libs['haggle'], 'haggle_attribute_set_name'):
    haggle_attribute_set_name = _libs['haggle'].haggle_attribute_set_name
    haggle_attribute_set_name.argtypes = [POINTER(struct_attribute), String]
    if sizeof(c_int) == sizeof(c_void_p):
        haggle_attribute_set_name.restype = ReturnString
    else:
        haggle_attribute_set_name.restype = String
        haggle_attribute_set_name.errcheck = ReturnString

# /usr/local/include/libhaggle/attribute.h: 101
if hasattr(_libs['haggle'], 'haggle_attribute_set_value'):
    haggle_attribute_set_value = _libs['haggle'].haggle_attribute_set_value
    haggle_attribute_set_value.argtypes = [POINTER(struct_attribute), String]
    if sizeof(c_int) == sizeof(c_void_p):
        haggle_attribute_set_value.restype = ReturnString
    else:
        haggle_attribute_set_value.restype = String
        haggle_attribute_set_value.errcheck = ReturnString

# /usr/local/include/libhaggle/attribute.h: 108
if hasattr(_libs['haggle'], 'haggle_attribute_get_weight'):
    haggle_attribute_get_weight = _libs['haggle'].haggle_attribute_get_weight
    haggle_attribute_get_weight.argtypes = [POINTER(struct_attribute)]
    haggle_attribute_get_weight.restype = c_ulong

# /usr/local/include/libhaggle/attribute.h: 115
if hasattr(_libs['haggle'], 'haggle_attribute_set_weight'):
    haggle_attribute_set_weight = _libs['haggle'].haggle_attribute_set_weight
    haggle_attribute_set_weight.argtypes = [POINTER(struct_attribute), c_ulong]
    haggle_attribute_set_weight.restype = c_ulong

# /usr/local/include/libhaggle/attribute.h: 124
if hasattr(_libs['haggle'], 'haggle_attribute_new'):
    haggle_attribute_new = _libs['haggle'].haggle_attribute_new
    haggle_attribute_new.argtypes = [String, String]
    haggle_attribute_new.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 133
if hasattr(_libs['haggle'], 'haggle_attribute_copy'):
    haggle_attribute_copy = _libs['haggle'].haggle_attribute_copy
    haggle_attribute_copy.argtypes = [POINTER(struct_attribute)]
    haggle_attribute_copy.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 145
if hasattr(_libs['haggle'], 'haggle_attribute_new_weighted'):
    haggle_attribute_new_weighted = _libs['haggle'].haggle_attribute_new_weighted
    haggle_attribute_new_weighted.argtypes = [String, String, c_ulong]
    haggle_attribute_new_weighted.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 157
if hasattr(_libs['haggle'], 'haggle_attribute_free'):
    haggle_attribute_free = _libs['haggle'].haggle_attribute_free
    haggle_attribute_free.argtypes = [POINTER(struct_attribute)]
    haggle_attribute_free.restype = None

# /usr/local/include/libhaggle/attribute.h: 170
class struct_attributelist(Structure):
    pass

struct_attributelist.__slots__ = [
    'attributes',
    'num_attributes',
]
struct_attributelist._fields_ = [
    ('attributes', list_t),
    ('num_attributes', c_ulong),
]

haggle_attrlist_t = struct_attributelist # /usr/local/include/libhaggle/attribute.h: 170

# /usr/local/include/libhaggle/attribute.h: 182
if hasattr(_libs['haggle'], 'haggle_attributelist_new'):
    haggle_attributelist_new = _libs['haggle'].haggle_attributelist_new
    haggle_attributelist_new.argtypes = []
    haggle_attributelist_new.restype = POINTER(struct_attributelist)

# /usr/local/include/libhaggle/attribute.h: 194
if hasattr(_libs['haggle'], 'haggle_attributelist_new_from_attribute'):
    haggle_attributelist_new_from_attribute = _libs['haggle'].haggle_attributelist_new_from_attribute
    haggle_attributelist_new_from_attribute.argtypes = [POINTER(struct_attribute)]
    haggle_attributelist_new_from_attribute.restype = POINTER(struct_attributelist)

# /usr/local/include/libhaggle/attribute.h: 208
if hasattr(_libs['haggle'], 'haggle_attributelist_new_from_string'):
    haggle_attributelist_new_from_string = _libs['haggle'].haggle_attributelist_new_from_string
    haggle_attributelist_new_from_string.argtypes = [String]
    haggle_attributelist_new_from_string.restype = POINTER(struct_attributelist)

# /usr/local/include/libhaggle/attribute.h: 220
if hasattr(_libs['haggle'], 'haggle_attributelist_copy'):
    haggle_attributelist_copy = _libs['haggle'].haggle_attributelist_copy
    haggle_attributelist_copy.argtypes = [POINTER(struct_attributelist)]
    haggle_attributelist_copy.restype = POINTER(struct_attributelist)

# /usr/local/include/libhaggle/attribute.h: 226
if hasattr(_libs['haggle'], 'haggle_attributelist_free'):
    haggle_attributelist_free = _libs['haggle'].haggle_attributelist_free
    haggle_attributelist_free.argtypes = [POINTER(struct_attributelist)]
    haggle_attributelist_free.restype = None

# /usr/local/include/libhaggle/attribute.h: 238
if hasattr(_libs['haggle'], 'haggle_attributelist_remove_attribute'):
    haggle_attributelist_remove_attribute = _libs['haggle'].haggle_attributelist_remove_attribute
    haggle_attributelist_remove_attribute.argtypes = [POINTER(struct_attributelist), String, String]
    haggle_attributelist_remove_attribute.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 248
if hasattr(_libs['haggle'], 'haggle_attributelist_add_attribute'):
    haggle_attributelist_add_attribute = _libs['haggle'].haggle_attributelist_add_attribute
    haggle_attributelist_add_attribute.argtypes = [POINTER(struct_attributelist), POINTER(struct_attribute)]
    haggle_attributelist_add_attribute.restype = c_ulong

# /usr/local/include/libhaggle/attribute.h: 260
if hasattr(_libs['haggle'], 'haggle_attributelist_get_attribute_n'):
    haggle_attributelist_get_attribute_n = _libs['haggle'].haggle_attributelist_get_attribute_n
    haggle_attributelist_get_attribute_n.argtypes = [POINTER(struct_attributelist), c_ulong]
    haggle_attributelist_get_attribute_n.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 272
if hasattr(_libs['haggle'], 'haggle_attributelist_get_attribute_by_name'):
    haggle_attributelist_get_attribute_by_name = _libs['haggle'].haggle_attributelist_get_attribute_by_name
    haggle_attributelist_get_attribute_by_name.argtypes = [POINTER(struct_attributelist), String]
    haggle_attributelist_get_attribute_by_name.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 283
if hasattr(_libs['haggle'], 'haggle_attributelist_get_attribute_by_name_value'):
    haggle_attributelist_get_attribute_by_name_value = _libs['haggle'].haggle_attributelist_get_attribute_by_name_value
    haggle_attributelist_get_attribute_by_name_value.argtypes = [POINTER(struct_attributelist), String, String]
    haggle_attributelist_get_attribute_by_name_value.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 294
if hasattr(_libs['haggle'], 'haggle_attributelist_get_attribute_by_name_n'):
    haggle_attributelist_get_attribute_by_name_n = _libs['haggle'].haggle_attributelist_get_attribute_by_name_n
    haggle_attributelist_get_attribute_by_name_n.argtypes = [POINTER(struct_attributelist), String, c_int]
    haggle_attributelist_get_attribute_by_name_n.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/attribute.h: 304
if hasattr(_libs['haggle'], 'haggle_attributelist_detach_attribute'):
    haggle_attributelist_detach_attribute = _libs['haggle'].haggle_attributelist_detach_attribute
    haggle_attributelist_detach_attribute.argtypes = [POINTER(struct_attributelist), POINTER(struct_attribute)]
    haggle_attributelist_detach_attribute.restype = c_int

# /usr/local/include/libhaggle/attribute.h: 313
if hasattr(_libs['haggle'], 'haggle_attributelist_size'):
    haggle_attributelist_size = _libs['haggle'].haggle_attributelist_size
    haggle_attributelist_size.argtypes = [POINTER(struct_attributelist)]
    haggle_attributelist_size.restype = c_ulong

# /usr/local/include/libhaggle/attribute.h: 323
if hasattr(_libs['haggle'], 'haggle_attributelist_pop'):
    haggle_attributelist_pop = _libs['haggle'].haggle_attributelist_pop
    haggle_attributelist_pop.argtypes = [POINTER(struct_attributelist)]
    haggle_attributelist_pop.restype = POINTER(struct_attribute)

enum_path_type = c_int # /usr/local/include/libhaggle/platform.h: 219

PLATFORM_PATH_HAGGLE_EXE = 0 # /usr/local/include/libhaggle/platform.h: 219

PLATFORM_PATH_HAGGLE_PRIVATE = (PLATFORM_PATH_HAGGLE_EXE + 1) # /usr/local/include/libhaggle/platform.h: 219

PLATFORM_PATH_HAGGLE_DATA = (PLATFORM_PATH_HAGGLE_PRIVATE + 1) # /usr/local/include/libhaggle/platform.h: 219

PLATFORM_PATH_HAGGLE_TEMP = (PLATFORM_PATH_HAGGLE_DATA + 1) # /usr/local/include/libhaggle/platform.h: 219

PLATFORM_PATH_APP_DATA = (PLATFORM_PATH_HAGGLE_TEMP + 1) # /usr/local/include/libhaggle/platform.h: 219

path_type_t = enum_path_type # /usr/local/include/libhaggle/platform.h: 219

# /usr/local/include/libhaggle/platform.h: 224
if hasattr(_libs['haggle'], 'libhaggle_platform_set_path'):
    libhaggle_platform_set_path = _libs['haggle'].libhaggle_platform_set_path
    libhaggle_platform_set_path.argtypes = [path_type_t, String]
    libhaggle_platform_set_path.restype = c_int

# /usr/local/include/libhaggle/platform.h: 225
if hasattr(_libs['haggle'], 'libhaggle_platform_get_path'):
    libhaggle_platform_get_path = _libs['haggle'].libhaggle_platform_get_path
    libhaggle_platform_get_path.argtypes = [path_type_t, String]
    if sizeof(c_int) == sizeof(c_void_p):
        libhaggle_platform_get_path.restype = ReturnString
    else:
        libhaggle_platform_get_path.restype = String
        libhaggle_platform_get_path.errcheck = ReturnString

# /usr/local/include/libhaggle/platform.h: 236
if hasattr(_libs['haggle'], 'prng_init'):
    prng_init = _libs['haggle'].prng_init
    prng_init.argtypes = []
    prng_init.restype = None

# /usr/local/include/libhaggle/platform.h: 241
if hasattr(_libs['haggle'], 'prng_uint8'):
    prng_uint8 = _libs['haggle'].prng_uint8
    prng_uint8.argtypes = []
    prng_uint8.restype = c_ubyte

# /usr/local/include/libhaggle/platform.h: 246
if hasattr(_libs['haggle'], 'prng_uint32'):
    prng_uint32 = _libs['haggle'].prng_uint32
    prng_uint32.argtypes = []
    prng_uint32.restype = c_ulong

dataobject_id_t = c_ubyte * 20 # /usr/local/include/libhaggle/dataobject.h: 45

# /usr/local/include/libhaggle/dataobject.h: 48
class struct_dataobject(Structure):
    pass

haggle_dobj_t = struct_dataobject # /usr/local/include/libhaggle/dataobject.h: 48

# /usr/local/include/libhaggle/dataobject.h: 79
try:
    haggle_directory = (String).in_dll(_libs['haggle'], 'haggle_directory')
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 90
if hasattr(_libs['haggle'], 'haggle_dataobject_new'):
    haggle_dataobject_new = _libs['haggle'].haggle_dataobject_new
    haggle_dataobject_new.argtypes = []
    haggle_dataobject_new.restype = POINTER(struct_dataobject)

# /usr/local/include/libhaggle/dataobject.h: 100
if hasattr(_libs['haggle'], 'haggle_dataobject_new_from_file'):
    haggle_dataobject_new_from_file = _libs['haggle'].haggle_dataobject_new_from_file
    haggle_dataobject_new_from_file.argtypes = [String]
    haggle_dataobject_new_from_file.restype = POINTER(struct_dataobject)

# /usr/local/include/libhaggle/dataobject.h: 115
if hasattr(_libs['haggle'], 'haggle_dataobject_new_from_buffer'):
    haggle_dataobject_new_from_buffer = _libs['haggle'].haggle_dataobject_new_from_buffer
    haggle_dataobject_new_from_buffer.argtypes = [POINTER(c_ubyte), c_size_t]
    haggle_dataobject_new_from_buffer.restype = POINTER(struct_dataobject)

# /usr/local/include/libhaggle/dataobject.h: 125
if hasattr(_libs['haggle'], 'haggle_dataobject_new_from_raw'):
    haggle_dataobject_new_from_raw = _libs['haggle'].haggle_dataobject_new_from_raw
    haggle_dataobject_new_from_raw.argtypes = [POINTER(c_ubyte), c_size_t]
    haggle_dataobject_new_from_raw.restype = POINTER(struct_dataobject)
